--- a/git-core-gitweb-lighttpd.conf
+++ b/git-core-gitweb-lighttpd.conf
@@ -2,13 +2,13 @@
 # required lighttpd-mod_setenv
 
 alias.url += (
-    "/gitweb/" => "/usr/share/gitweb/",
+    "/gitweb" => "/usr/share/gitweb/",
 )
 
 $HTTP["url"] =~ "^/gitweb/" {
     server.document-root = "/usr/share/gitweb"
     index-file.names     = ( "gitweb.cgi" )
-    cgi.assign = ( "gitweb.cgi" => "/usr/lib/cgi-bin/gitweb.cgi" )
+    cgi.assign = ( "gitweb.cgi" => "" )
 
     setenv.add-environment = (
 	"GITWEB_CONFIG" => "/etc/webapps/gitweb/gitweb.conf",
