- one more trailing slash in gitweb-lighttpd.conf
Changed files:
    git-core-gitweb-lighttpd.conf -> 1.3

--- a/git-core-gitweb-lighttpd.conf
+++ b/git-core-gitweb-lighttpd.conf
@@ -2,7 +2,7 @@
 # required lighttpd-mod_setenv
 
 alias.url += (
-    "/gitweb" => "/usr/share/gitweb/",
+    "/gitweb" => "/usr/share/gitweb",
 )
 
 $HTTP["url"] =~ "^/gitweb/" {
