- working apache configurations
Changed files:
    git-core-gitweb-httpd.conf -> 1.2

--- a/git-core-gitweb-httpd.conf
+++ b/git-core-gitweb-httpd.conf
@@ -4,20 +4,25 @@
 </Directory>
 
 # Version 1 (default): under /cgi-bin/gitweb.cgi address
+Alias /cgi-bin/static/ /usr/share/gitweb/static/
 ScriptAlias /cgi-bin/gitweb.cgi /usr/lib/cgi-bin/gitweb.cgi
-Alias /gitweb/ /usr/share/gitweb/
 <Location /cgi-bin/gitweb.cgi>
 	Allow from All
 </Location>
+SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
 
+#
 # Version 2: gitweb as a handler to whole vhost:
 #<VirtualHost *:80>
 #	ServerName gitweb
 #
-#	Alias /gitweb/ /usr/share/gitweb/
-#	DocumentRoot /usr/lib/cgi-bin/gitweb.cgi
+#	Alias /static /usr/share/gitweb/static
+#	DocumentRoot /usr/lib/cgi-bin
+#	AddHandler cgi-script .cgi
+#	DirectoryIndex gitweb.cgi
 #	<Location />
 #		Options ExecCGI
 #		Allow from All
 #	</Location>
+#	SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
 #</VirtualHost>
