- migrate to apache 2.4 - rel 2

--- a/git-core-gitweb-apache.conf
+++ b/git-core-gitweb-apache.conf
@@ -1,13 +1,13 @@
 <Directory /usr/share/gitweb>
 	AllowOverride None
-	Require all granted
+	Allow from All
 </Directory>
 
 # Version 1 (default): under /cgi-bin/gitweb.cgi address
 Alias /cgi-bin/static/ /usr/share/gitweb/static/
 ScriptAlias /cgi-bin/gitweb.cgi /usr/lib/cgi-bin/gitweb.cgi
 <Location /cgi-bin/gitweb.cgi>
-	Require all granted
+	Allow from All
 </Location>
 SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
 
@@ -22,7 +22,7 @@ SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
 #	DirectoryIndex gitweb.cgi
 #	<Location />
 #		Options ExecCGI
-#		Require all granted
+#		Allow from All
 #	</Location>
 #	SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
 #</VirtualHost>
