--- a/git-core-gitweb-httpd.conf
+++ b/git-core-gitweb-httpd.conf
@@ -1,13 +1,29 @@
 <Directory /usr/share/gitweb>
 	AllowOverride None
-	Allow from All
+	# Apache 2.x
+	<IfModule !mod_authz_core.c>
+		Order allow,deny
+		Allow from all
+	</IfModule>
+	# Apache 2.4
+	<IfModule mod_authz_core.c>
+		Require all granted
+	</IfModule>
 </Directory>
 
 # Version 1 (default): under /cgi-bin/gitweb.cgi address
 Alias /cgi-bin/static/ /usr/share/gitweb/static/
 ScriptAlias /cgi-bin/gitweb.cgi /usr/lib/cgi-bin/gitweb.cgi
 <Location /cgi-bin/gitweb.cgi>
-	Allow from All
+	# Apache 2.x
+	<IfModule !mod_authz_core.c>
+		Order allow,deny
+		Allow from all
+	</IfModule>
+	# Apache 2.4
+	<IfModule mod_authz_core.c>
+		Require all granted
+	</IfModule>
 </Location>
 SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
 
@@ -22,7 +38,15 @@ SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
 #	DirectoryIndex gitweb.cgi
 #	<Location />
 #		Options ExecCGI
-#		Allow from All
+#		# Apache 2.x
+#		<IfModule !mod_authz_core.c>
+#			Order allow,deny
+#			Allow from all
+#		</IfModule>
+#		# Apache 2.4
+#		<IfModule mod_authz_core.c>
+#			Require all granted
+#		</IfModule>
 #	</Location>
 #	SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
 #</VirtualHost>
