gitweb: mod_env in suggests, so make SetEnv block optional

--- a/git-core-gitweb-httpd.conf
+++ b/git-core-gitweb-httpd.conf
@@ -25,7 +25,9 @@ ScriptAlias /cgi-bin/gitweb.cgi /usr/lib/cgi-bin/gitweb.cgi
 		Require all granted
 	</IfModule>
 </Location>
-SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
+<IfModule mod_env.c>
+	SetEnv GITWEB_CONFIG "/etc/webapps/gitweb/gitweb.conf"
+</IfModule>
 
 #
 # Version 2: gitweb as a handler to whole vhost:
